
Made mkillum more tolerant of non-planar polygons in its sampling routines.

Added "-recover" option to genBSDF to pick up where it left off.

Fixed genBSDF issue that was created incorrect normalization of
Klems output.  Thanks to David G-M and Christian Knoflach for
discovering the error.  Also improved sampling of indirect irradiance
that showed some slight bias due to poor sample collision avoidance.

Fixed long-standing issue with -aa 0 neglecting textures in calculating
surface shading.

Fixed bug in ranimove introduced during photon map integration.

Added check for steep sections of BSDF in pabopto2bsdf, creating narrower
peakes in those places and mitigating some normalization issues.

Added view360stereo.cal by Mark Stock to handle 360-degree over/under
stereo views.

Added MAX2SHADE macro to place limit on number of light sources
to precheck for obstructions.  (Currently set to 200.)  This
avoids excessive start-up times for scenes with many light sources.
Thanks to Axel Jacobs for pointing out the problem.

Added -v option to obj2mesh to print out mesh statistics.

Rewrote bsdf2rad from ground up and made it a standard part of build.

Fixed bug in orientation of Reinhart/Tregenza sample generator in rfluxmtx.

Added ability to perform shadow-testing through unproxied BSDFs with strong
through (direct-direct) component.

Added {+|-}a options to genBSDF and bsdf2ttree for switching off reciprocity
averaging.

Added bias to see through BTDFs with a strong "through" component
rather than scattering view rays.  This is in lieu of peak extraction,
which looked to be too difficult from an implementation standpoint.

Added bsdfview tool analogous to objview but for BSDF files (XML and SIR),
which calls bsdf2rad then rad with a few useful default views.

=========================
Version 5.2

Created psketch program to apply non-photorealistic rendering to selected
objects, identified by modifier name(s).